<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/playerPlayerButton"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:background="@drawable/custom_button"
        android:text="@string/playerplayerButtonText"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/custom_back_button"
        android:text="@string/qutiButtonText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerPlayerButton" />

    <Button
        android:id="@+id/resumeButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/custom_button"
        android:text="@string/resumeButtonText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/quitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerPlayerButton"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleTextViewText"
        android:textColor="#DA0340"
        android:textSize="70sp"
        android:fontFamily="@font/motion_pictures"
        app:layout_constraintBottom_toTopOf="@+id/playerPlayerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playerCpuButton"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:background="@drawable/custom_button"
        android:text="@string/playerCpuButtonText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/resumeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerPlayerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>