<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <Button
        android:id="@+id/button11"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:textColor="#030EDA"
        android:textSize="40sp"
        android:typeface="sans"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button01"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="2dp"
        android:textColor="#030EDA"
        android:textSize="40sp"
        android:typeface="sans"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button21"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/black"
        android:textColor="#030EDA"
        android:layout_marginTop="2dp"
        android:textSize="40sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button10"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/black"
        android:textColor="#030EDA"
        android:layout_marginEnd="2dp"
        android:textSize="40sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button20"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/black"
        android:textColor="#030EDA"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="2dp"
        android:textSize="40sp"
        android:typeface="sans"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button00"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/black"
        android:textColor="#030EDA"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:textSize="40sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button01" />

    <Button
        android:id="@+id/button12"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/black"
        android:textColor="#030EDA"
        android:layout_marginStart="2dp"
        android:textSize="40sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button02"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/black"
        android:textColor="#030EDA"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:textSize="40sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintStart_toEndOf="@+id/button01" />

    <Button
        android:id="@+id/button22"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/black"
        android:textColor="#030EDA"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:textSize="40sp"
        android:typeface="sans"
        app:layout_constraintStart_toEndOf="@+id/button21"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="35sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/button01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/custom_back_button"
        android:text="@string/restartButtonText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button21" />

    <View
        android:id="@+id/divider3"
        android:layout_width="210dp"
        android:layout_height="2dp"
        android:background="#08B338"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button01"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/divider5"
        android:layout_width="210dp"
        android:layout_height="2dp"
        android:background="#08B338"
        app:layout_constraintBottom_toTopOf="@+id/button21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <View
        android:id="@+id/divider7"
        android:layout_width="2dp"
        android:layout_height="210dp"
        android:background="#08B338"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider8"
        android:layout_width="2dp"
        android:layout_height="210dp"
        android:background="#08B338"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/menuButtonText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/message"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/flashLightCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/flashlightCheck"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintEnd_toStartOf="@+id/menuButton"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>